deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckb-explorer-web
  namespace: NAME_SPACE
  labels:
    app: ckb-explorer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckb-explorer-web
  template:
    metadata:
      labels:
        app: ckb-explorer-web
    spec:
      containers:
        - name: ckb-explorer-web
          image: IMAGE_NAME
          imagePullPolicy: Always
          command: [ "java", "-jar", "/app.jar" ]
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
          ports:
            - containerPort: 18080
          volumeMounts:
            - name: ckb-explorer-web
              mountPath: "/config"
      volumes:
        - name: ckb-explorer-web
          configMap:
            name: ckb-explorer-web
            items:
              - path: application.yml
                key: application.yml
      imagePullSecrets:
        - name: rivtower-docker-registry

---
apiVersion: v1
kind: Service
metadata:
  name: ckb-explorer-web
  namespace: NAME_SPACE
spec:
  ports:
    - port: 18080
      protocol: TCP
      targetPort: 18080
      name: http
#      nodePort: 31088
  selector:
    app: ckb-explorer-web
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckb-explorer-web
  namespace: NAME_SPACE
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: rivdap
  rules:
    - host: ckb-explorer-api.rivtower.cc
      http:
        paths:
          - backend:
              service:
                name: ckb-explorer-web
                port:
                  number: 18080
            path: /
            pathType: ImplementationSpecific
